Changed compose name of package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "felixarntz/plugin-lib",
+  "name": "awsmug/plugin-lib",
   "type": "wordpress-muplugin",
   "description": "Reusable library for all kinds of WordPress plugins.",
   "version": "1.0.4",
